<resources>
    <string name="app_name">HomeMade</string>
    <string name="webclient_id">1010678360677-qbkefnd06qg5mgbgo60om8keu52hahr8.apps.googleusercontent.com</string>
    <string name="facebook_app_id">651259046041586</string>
    <string name="fb_login_protocol_scheme">fb651259046041586</string>
    <string name="sign_up">Sign up</string>
    <string name="where_you_can_easily_find_your_assistant_chief">Where you can easily find your assistant chief</string>
    <string name="homemade">HOMEMADE</string>
    <string name="facebook">Facebook</string>
    <string name="apple">Apple</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="forget_password">Forget Password</string>
    <string name="we_ll_send_you_an_email_with_a_link_to_reset_you_password">We\'ll send you an email with a link to reset you password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_sign_up_with_email">or sign up with email</string>
    <string name="send">Send</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="current_password">Current password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="new_password">New password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="my_profile">My Profile</string>
    <string name="regina_pollastro">Regina Pollastro</string>
    <string name="regina_pollastro_gamilc_com">regina_pollastro@gamilc.com</string>
    <string name="log_out">Log Out</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="google">Sign in with Google</string>
    <string name="error_occured">Failed to sign in with Google, please try again later.</string>
    <string name="my_ingredients">My ingredients</string>
    <string name="see_recipes">See Recipes</string>
    <string name="my_pantry">My Pantry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diary">Diary</string>
    <string name="you_have_3_ingredients">You have 3 ingredients</string>
    <string name="add">+Add</string>
    <string name="vegetables">Vegetables</string>
    <string name="fruits">Fruits</string>
    <string name="jelena_denisova">Jelena Denisova</string>
    <string name="recipe_one">Boil a pot of water and add kosher salt. Soak wooden skewers in water for 30 minutes.</string>
    <string name="recipe_four">To peel the tomatoes, place them in boiling water for 1 minute and then immediately transfer to cold water</string>
    <string name="recipe_three">From classic quiche to shallot tatin and egg and bacon filo tarts, our showstopping recipes are great for a lig</string>
    <string name="recipe_two">To make the pastry, put the flour and a good pinch of salt in a large bowl. Grate in the butter</string>
    <string name="lizzie_rose">Lizzie Rose</string>
    <string name="pedro_amorim">Pedro Amorim</string>
    <string name="jaroslav_brabec">Jaroslav Brabec</string>
    <string name="posts">Posts</string>
    <string name="favorites">Favorites</string>
    <string name="shopping_list">Shopping List</string>
    <string name="tomato_tarte_tatin">Tomato tarte tatin</string>
    <string name="description">Description</string>
    <string name="full_recipe">To make the pastry, put the flour and a good pinch of salt in a large bowl. Grate in the butter and rub it into the flour with your fingertips. Mix the egg yolk with 2 tbsp cold water and stir into the mixture to make a dough. If you need to add any more water to bring it together, do so very gradually. Shape into a disc, wrap and chill for 30 minutes.</string>
    <string name="youtube_link">YouTube Video link</string>
    <string name="link">https://www.youtube.com/watch?v=lgPSlebBN3Q</string>
    <string name="post">Post</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="shaamikh_al_hakim">Shaamikh Al Hakim</string>
    <string name="comment">Elephants pick up and spray dust the same way they do water—with their trunks.</string>
    <string name="timing">3 days ago</string>
    <string name="new_post">New Post</string>
    <string name="recipe_name">Recipe name</string>
    <string name="youtube_video_link_optional">YouTube Video link (Optional).</string>
    <string name="sour_cream">sour cream</string>
    <string name="add_more">Add more</string>
    <string name="recipes_posted_by_users">Recipes posted by users</string>
    <string name="recipes_from_the_app">Recipes from the app</string>
    <string name="results_from_the_internet">Results from the internet</string>
    <string name="recipes_by">Recipes by</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="add_ingredient_dialog">Add</string>
    <string name="potato">potato</string>
    <string name="tomato">tomato</string>
    <string name="eggplant">eggplant</string>
    <string name="what_s_in_my_list">What\'s in my list</string>
    <string name="what_i_got">What I got</string>

    <string-array name="grocery_list">
        <item>eggplant</item>
        <item>cucumber</item>
        <item>garlic</item>
        <item>parsley</item>
    </string-array>
</resources>