<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_intro"
    android:orientation="vertical"
    tools:context=".feature.introduction.view.IntroductionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="@dimen/dim_86dp"
            android:layout_height="@dimen/dim_86dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dim_100"
            android:src="@drawable/icon" />

        <TextView
            style="@style/TextViewStyle"
            android:layout_marginTop="@dimen/dim_11"
            android:text="@string/homemade"
            android:textColor="@color/white"/>

        <TextView
            style="@style/TextViewStyle"
            android:layout_gravity="center"
            android:layout_margin="@dimen/dim_10"
            android:text="@string/where_you_can_easily_find_your_assistant_chief"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/dim_18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dim_80"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sign_in_intro"
            android:layout_width="@dimen/dim_159"
            android:layout_height="@dimen/dim_52"
            android:layout_marginStart="@dimen/dim_8"
            android:background="@drawable/btn_regular"
            android:fontFamily="@font/sfuitext_regular"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="@dimen/dim_14sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/sign_up_intro"
            android:layout_width="@dimen/dim_159"
            android:layout_height="@dimen/dim_52"
            android:layout_marginStart="@dimen/dim_8"
            android:background="@drawable/btn_transparent"
            android:fontFamily="@font/sfuitext_regular"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="@dimen/dim_14sp"
            app:backgroundTint="@null" />
    </LinearLayout>
</LinearLayout>