<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature.forgetPassword.view.ForgetPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_marginTop="@dimen/dim_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/back_forgetPassword"
            android:layout_width="@dimen/dim_30"
            android:layout_height="@dimen/dim_30"
            android:src="@drawable/back_black"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_gravity="start"/>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="@dimen/dim_86dp"
        android:layout_height="@dimen/dim_86dp"
        android:layout_marginTop="@dimen/dim_30"
        android:layout_gravity="center"
        android:src="@drawable/icon_green"/>

    <TextView
        android:id="@+id/tv_forget_password"
        style="@style/TextViewStyle"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/dim_11"/>

    <TextView
        android:id="@+id/tv_forgetPassword_desc"
        style="@style/TextViewStyle"
        android:text="@string/we_ll_send_you_an_email_with_a_link_to_reset_you_password"
        android:textColor="@color/bold_grey_txt"
        android:textSize="@dimen/dim_14sp"
        android:layout_margin="@dimen/dim_10"
        android:gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/ed_email_forgetPassword"
            style="@style/TextInputEditTextStyle"
            android:inputType="textEmailAddress"
            android:layout_marginTop="@dimen/dim_30"
            android:layout_marginStart="@dimen/dim_30"
            android:layout_marginEnd="@dimen/dim_30"
            android:imeOptions="actionDone"
            android:hint="@string/email" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_forgetPassword"
        android:layout_width="@dimen/dim_325"
        android:layout_height="@dimen/dim_52"
        app:backgroundTint="@null"
        android:layout_marginTop="@dimen/dim_15"
        android:background="@drawable/btn_regular"
        android:text="@string/send"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:textSize="@dimen/dim_15sp"
        android:fontFamily="@font/sfuitext_regular"/>


</LinearLayout>