<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_color"
    tools:context=".feature.changePassword.view.ChangePasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color">

        <RelativeLayout
            android:layout_marginTop="@dimen/dim_10"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back_changePassword"
                android:layout_width="@dimen/dim_30"
                android:layout_height="@dimen/dim_30"
                android:src="@drawable/back_white"
                style="@style/Widget.AppCompat.Button.Borderless"/>

            <TextView
                android:id="@+id/tv_change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/montserrat"
                android:paddingLeft="@dimen/dim_100"
                android:text="@string/change_password"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/dim_18sp" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_main_shape">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_il_currentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                style="@style/TextInputEditTextStyle"
                android:id="@+id/ed_current_password"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/current_password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_il_newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/ed_new_password"
                style="@style/TextInputEditTextStyle"
                android:layout_marginTop="@dimen/dim_15"
                android:layout_marginStart="@dimen/dim_30"
                android:layout_marginEnd="@dimen/dim_30"
                android:hint="@string/new_password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_il_repeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/ed_repeat_password"
                style="@style/TextInputEditTextStyle"
                android:layout_marginTop="@dimen/dim_15"
                android:layout_marginStart="@dimen/dim_30"
                android:layout_marginEnd="@dimen/dim_30"
                android:imeOptions="actionDone"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="@dimen/dim_325"
            android:layout_height="@dimen/dim_52"
            app:backgroundTint="@null"
            android:layout_marginTop="@dimen/dim_30"
            android:background="@drawable/btn_regular"
            android:text="@string/save"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:textSize="@dimen/dim_15sp"
            android:fontFamily="@font/sfuitext_regular"/>
    </LinearLayout>
</LinearLayout>